# glass-jax

./: .gitignore  CHANGELOG.md  README.md  TODO.md  context.md  patch.py  patch_benchmark.py  patch_coding_tree.py  patch_fix_math.py  patch_hierarchy.py  patch_hierarchy_v1.py  patch_incremental_merge.py  patch_multi_return.py  patch_multilevel.py  patch_refine.py  patch_sparse.py  patch_sparse_csr.py  patch_tables.py  pyproject.toml  test_fast.py  test_flat_merge.py  test_math.py  test_tree.py  test_tree_from_proj.py
docs/: README.md  design_doc.md  idea-lib.md  lsenet_analysis.md  math_and_implementation.md  prompt.md  rl_integration_ideas.md
docs/experimental_reports/: benchmark_sbm_20260506.md  cluster_idea_lib_benchmark_20260507.json  cluster_idea_lib_benchmark_20260507.md  comprehensive_benchmark_20260507.md  hierarchical_20260509_092200.md  k_controlled_objective_analysis.md  ogbn_arxiv_20260510_103203.json  same_protocol_attributed_checkpoint.json  (+53 more)
tests/: ablation_study.py  aggregated_to_latex.py  benchmark.py  benchmark_cluster_idea_lib.py  benchmark_full.py  benchmark_glass_differentiable_protocol.py  benchmark_hierarchical.py  benchmark_ogbn_arxiv.py  benchmark_realworld.py  benchmark_same_protocol.py  benchmark_seclust.py  benchmark_seclust_full.py  compare_sep.py  hierarchical_clustering.py  investigate_k.py  investigate_se.py  lookahead_testbed.py  run_lookahead_testbed.py  scalability_seclust.py  test_cluster_idea_lib.py  test_cora.py  test_cora_glass.py  test_seclust.py  visualize_seclust.py
wiki/: README.md  differentiable-vs-discrete-clustering.md
(+114 files in other folders)
